--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,6 +169,7 @@ a:hover, a:focus{outline:none;outline:0;outline-offset:0;}
 .dropdown-menu{border:0;border-top:4px solid #f26f6f;border-radius:0;padding:0;}
 .dropdown-menu > li > a{padding:6px 20px;}
 .inner-content{padding:0 0 60px;min-height:700px;overflow-x:hidden;}
+.inner-content.video{padding:60px 0;}
 /***** List page content *****/
 .user-list{padding:90px 0 0;display:inline-block;position:relative;width:100%;margin-bottom:50px;}
 .bg-name{font-family:'Poppins';font-size:280px;font-weight:700;color:rgba(39,35,36,.03);line-height:100%;text-transform:uppercase;position:absolute;top:-32px;right:-31px;z-index:-1;letter-spacing:0.1em;}
@@ -336,6 +337,9 @@ input:checked + .slider:before { -webkit-transform: translateX(56px); -ms-transf
 ._timestamp{padding:4px;background:#fff;opacity:0.7;color:#000;position:absolute;top:15px;right:15px;border-radius:5px;font-size:10px;z-index:10;}
 .level2 .my-picture-box > a:first-child{overflow:hidden;height:250px;width:250px;}
 .level2 .my-picture-box img{position: absolute;left:-99999px;top:-99999px;right:-99999px;bottom:-99999px;margin:auto;}
+.level2 .picture-action{opacity:1;}
+.level2 .picture-action:before{background:none;}
+.level2 .my-picture-box:hover .picture-action:before{background:rgba(242,111,111,.6);}
 .my-profile .bootstrap-select{width:100% !important;}
 
 /*****   21-april-2017  *****/
