--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ a:hover, a:focus{outline:none;outline:0;outline-offset:0;}
 .user-dropdown > a big{font-family:'poppins';font-size:15px;color:#231f20;text-decoration:none;line-height:20px;text-transform:uppercase;letter-spacing:0.04em;font-weight:700;margin:0 0 3px;display:block;min-width:90px;}
 .user-dropdown > a small{font-family:'poppins';font-size:12px;color:#666;text-decoration:none;line-height:20px;text-transform:uppercase;letter-spacing:0.04em;display:block;}
 .user-pic{border:2px solid #fff;box-shadow:1px 2px 3px 0 rgba(0,0,0,.2);width:60px;height:60px;display:block;position:absolute;top:0;left:0;border-radius:100px;display:block;}
-.user-pic img{min-width:56px;min-height:56px;max-width:56px;border-radius:100px;}
+.user-pic img{min-width:56px;max-height:56px;min-height:56px;max-width:56px;border-radius:100px;display:block;}
 .down-caret{position:absolute;bottom:4px;right:0;}
 .down-caret svg{width:12px;}
 .user-dropdown > a:hover big,
@@ -237,10 +237,10 @@ a:hover, a:focus{outline:none;outline:0;outline-offset:0;}
 .account-l-link{margin:0 0 25px;}
 .left-my-picture ul{list-style:none;margin:0 0 0 -8px;padding:0 10px 0 0;}
 .left-my-picture ul li{width:25%;float:left;padding:0 11px 20px;display:block;}
-.left-my-picture ul li a{display:block;position:relative;transition:ease-in-out .5s;}
+.left-my-picture ul li a{display:block;position:relative;transition:ease-in-out .5s;height:68px;overflow:hidden;}
 .left-my-picture ul li a:after{content:'';width:100%;height:100%;position:absolute;top:0;left:0;display:block;border-radius:4px;transition:ease-in-out .5s;opacity:0;}
 .left-my-picture ul li a:hover:after{background:rgba(242,111,111,.6);opacity:1;}
-.left-my-picture ul li a img{display:block;border-radius:4px;width:100%;max-height:81px;}
+.left-my-picture ul li a img{display:block;border-radius:4px;left: 50%;max-width: 100px;min-height: 68px;min-width: 68px;position: absolute;top: 50%;transform: translate(-50%, -50%);}
 
 .loader-style{position:absolute;top:0;left:0;width:100%;height:100%;text-align: center; background:#e9e9e9; opacity:1; z-index:99; transition: top .8s cubic-bezier(.7,0,.3,1);-moz-transition:top .8s cubic-bezier(.7,0,.3,1);-webkit-transition:top .8s cubic-bezier(.7,0,.3,1);-o-transition:top .8s cubic-bezier(.7,0,.3,1);}
 .loader-container {position:absolute;width:100%;margin-left:0;left:0;top:50%;display:inline-block;-webkit-transform:translateY(-50%); -ms-transform: translateY(-50%); -moz-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%);}
@@ -267,8 +267,8 @@ ul.my-picture-ul:after,
 ul.my-picture-ul{list-style:none;margin:-15px -15px 0;padding:0;}
 ul.my-picture-ul > li{width:33.33%;float:left;padding:15px;position:relative;}
 ul.my-picture-ul.level2 > li{width:25%;max-height:250px;overflow:hidden;}
-ul.my-picture-ul > li > .my-picture-box > a{display:block;width:100%;position:relative;}
-ul.my-picture-ul > li > .my-picture-box > a img{width:100%;}
+ul.my-picture-ul > li > .my-picture-box > a{display:block;width:100%;position:relative;overflow:hidden;height:166px; }
+ul.my-picture-ul > li > .my-picture-box > a img{min-width:166px;min-height:166px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
 .my-picture-box{position:relative;border:4px solid #fff;}
 .picture-action:before{content:'';background:rgba(242,111,111,.6);width:100%;height:100%;position:absolute;top:0;left:0;z-index:-1;}
 .picture-action{opacity:0;width:100%;height:100%;position:absolute;top:0;left:0;text-align:center;z-index:10;display:block;vertical-align:middle;}
@@ -376,3 +376,96 @@ letter-spacing:0.05em;font-family:'Poppins';font-weight:300;}
 .cancel-message h3{color:#d44c5a;}
 .cancel-message .message-l {padding:24px 0 0;}
 .cancel-message .message-l svg{width:28px;height:28px;}
+
+/****** 22april-2017 *****/
+.error-message{position:absolute;bottom:-16px;left:0;color:red;font-size:12px;}
+
+/*****  26-april 2017 *****/
+.link-tab ul.nav { border:1px solid #f0efef; margin:0; padding:0; list-style:none; display:inline-block; vertical-align:top; border-right:0;}
+.link-tab ul.nav li{ float:left;background:#fff;}
+.link-tab ul.nav li a{ margin:0;border:0; font-family:'Poppins'; color:#666; font-size:14px; line-height:20px; padding:12px 20px 10px; border-right:1px solid #f0efef;}
+.link-tab ul.nav li a:hover,
+.link-tab ul.nav li a:focus,
+.link-tab ul.nav li.active a{border:0; border-right:1px solid #f26f6f; background:#f26f6f; color:#fff;}
+.talk-to-owner{ display:inline-block; vertical-align:top; width:100%;}
+.talk-to-carowner { padding:5px; display:inline-block; vertical-align:top; width:100%;}
+.talk-to-carowner h3{ margin:0 0 15px; padding:0; font-family:'Poppins'; font-size:16px; font-weight:normal; line-height:16px;color:#666;} 
+.talk-to-carowner h3 a{ font-family:'Roboto'; font-size:13px; line-height:16px; margin:0 0 0 5px; color:#51ca94; text-decoration:none;}
+.talk-to-carowner h3 a:hover{ color:#ff5f39;}
+.message-to-talk{ width:100%; }
+.message-to-talk textarea{ background:#fff; border:0; width:100%; height:80px; border:1px solid #f0efef; margin:0 0 10px; padding:10px; font-family:'Roboto'; font-size:14px; color:#877892;}
+.message-to-talk button{ background:#f26f6f; border:0; padding:10px 15px; color:#fff; font-family:'Roboto'; font-size:14px; color:#fff; font-weight:500; text-transform:uppercase;}
+.message-to-talk p{ font-family:'Roboto'; font-size:14px; color:#666; line-height:20px; float:right; text-align:right; margin:0;}
+.message-to-talk p a{ color:#51ca94;}
+.message-to-talk p a:hover{ color:#ff5f39;}
+.message-to-owner{ width:100%; display:inline-block; vertical-align:top; max-height:285px; overflow:auto; border:1px solid #f0efef; margin-bottom:25px; }
+.message-to-owner ul{ list-style:none; width:100%; display:inline-block; vertical-align:top; margin:10px 0 0; }
+.message-to-owner ul li{ padding:0 15px 10px 75px; min-height:65px; margin:0 0 10px; position:relative; border-bottom:1px solid #f0efef; display:table; width:100%;}
+.message-to-owner ul li:last-child{padding-bottom:0;border-bottom:0;margin:0;}
+.message-to-owner ul li .pic-01{ background:#f0efef; width:54px; height:54px; -webkit-border-radius:60px; -moz-border-radius:60px; border-radius:60px; position:absolute; left:10px; top:0; overflow:hidden;}
+.message-to-owner ul li .pic-01 a{ display:block; }
+.message-to-owner ul li .pic-01 img{ width:100%; height:100%;}
+.message-to-owner ul li p{ font-family:'Roboto'; font-size:14px; color:#666; line-height:16px; height:54px; display:table-cell; vertical-align:middle;margin:0;}
+.message-to-owner ul li.rider-talk .pic-01{ right:10px; left:auto;}
+.message-to-owner ul li.rider-talk { padding-right:75px; padding-left:15px;}
+.message-to-owner ul li.rider-talk p{ text-align:right;}
+.tab-content { border:1px solid #f0efef; margin:-1px 0 0; padding:20px; -webkit-box-shadow:3px 3px 3px -1px rgba(120, 135, 146, 0.5); -moz-box-shadow:3px 3px 3px -1px rgba(120, 135, 146, 0.5); box-shadow:3px 3px 3px -1px rgba(120, 135, 146, 0.5); display:inline-block; vertical-align:top; width:100%;background:#fff;}
+
+
+.message-conversations{ width:100%; display:inline-block; vertical-align:top;} 
+.message-conversations .tab-content p{ font-family:'Roboto'; font-size:14px; color:#666; line-height:100%; margin:10px 0;}
+.message-user-pic span{ width:60px; height:60px; overflow:hidden; display:inline-block; vertical-align:middle; margin:0 10px 0 0; -webkit-border-radius:80px; -moz-border-radius:80px; border-radius:80px; }
+.message-user-pic span img{  width:100%; min-height:60px;}
+.message-user-pic h4{ margin:20px 0; padding:0; display:inline-block; font-family:'Poppins'; font-size:14px; color:#666; text-overflow:ellipsis; white-space:nowrap; width:68%; height:18px; overflow:hidden; vertical-align:middle; }
+.message-count-div h6{ font-size:14px;}
+.exchange-rating-table p{ margin:0;  font-size:14px;}
+.message-conversations .tab-content .table{ table-layout: fixed;}
+.message-conversations .tab-content .table tr:nth-child(2n+2){ background:#f0efef;}
+.message-conversations .tab-content .table td{ vertical-align:middle; width:40%;border:0;}
+.message-conversations .tab-content .table td:nth-child(2){ width:35%;}
+.message-conversations .tab-content .table td:nth-child(3){ width:20%; text-align:right;}
+.message-conversations .tab-content .table td:nth-child(4){ width:10%; text-align:center;}
+.message-conversations .tab-content .table h5{ display:inline-block; vertical-align:top; width:auto; height:auto; background: #eff8fd; border: 1px solid #f0efef; padding:5px 8px; margin:0 10px 0 0;}
+.message-conversations .tab-content .table p{ margin:0; display:inline-block; vertical-align:top; line-height:26px; font-size:14px; width:99%; overflow:hidden; height:27px; white-space:nowrap; text-overflow:ellipsis;}
+.message-conversations .tab-content .table h6{ margin:0; display:inline-block; vertical-align:top; line-height:26px; font-size:14px; width:80%; overflow:hidden; height:27px; white-space:nowrap; text-overflow:ellipsis; font-family:'Roboto'; font-weight:400;}
+.message-conversations-panel-remove svg{ width:20px; height:20px; display:inline-block; vertical-align:middle;fill:#f26f6f;}
+.message-conversations-panel-remove svg:hover{fill:#333;}
+
+.table {border: 1px solid #f0efef;margin: 0;background: #fff;-webkit-box-shadow: 3px 4px 1px -2px #f0efef;-moz-box-shadow: 3px 4px 1px -2px #f0efef;box-shadow: 3px 4px 1px -2px #f0efef;}
+.notification-count{width:24px;height:24px;background:#ed7575;border:1px solid #fff;box-shadow:0 0 10px 0 rgba(0,0,0,.2);line-height:22px;display:block;text-align:center;position:absolute;top:8px;left:-4px;border-radius:100%;color:#fff;z-index:10;font-size:12px;font-weight:500;}
+.live-chat-user{float:right;margin:-67px 0 0;}
+.live-chat-user h4{margin:1px 0 0;padding:0;font-size:16px;line-height:22px;display:inline-block;text-align:right;text-transform:uppercase;vertical-align: middle;}
+.live-chat-user h4 small{color:#666;font-size:14px;text-decoration:none;display:block;line-height:100%;}
+.live-chat-user span{width:46px;height:46px;overflow:hidden;display:inline-block;margin:0 0 0 6px;border-radius:100%;vertical-align: middle;border:1px solid #fff;box-shadow:2px 2px 4px 0 rgba(0,0,0,.2);}
+.live-chat-user span img{min-width:46px;min-height:46px;}
+.chatlist-user:after{content:'';display:block;clear:both;}
+.chatlist-user{width:100%;}
+.chatlist-user h5 {margin: 0;border: 0;font-family: 'Poppins';color: #666;font-size: 14px;line-height: 20px;padding: 12px 20px 10px;border: 1px solid #f0efef;border-bottom:0;display:inline-block;background:#fff;}
+.chatlist-user-wrap{height:162px;white-space: nowrap;overflow: hidden;background:#fff;padding:15px 10px 10px;margin:0 0 15px;    box-shadow: 3px 3px 3px -1px rgba(120, 135, 146, 0.5);border: 1px solid #f0efef;}
+.chatlist-user ul{list-style:none;margin:0;padding:0;width:100%;overflow-x:auto;}
+.chatlist-user ul li{display:inline-block;white-space:nowrap;overflow:hidden;text-align:center;margin:0 20px 0 0;}
+.chatlist-user ul li span{width:70px;height:70px;display:block;margin:0 auto 10px;}
+.chatlist-user ul li span img{width:100%;min-height:70px;border-radius:4px;}
+.chatlist-user ul li h4 {margin:4px 0;padding:0;display:block;text-transform:uppercase;font-size:100%;}
+.chatlist-user ul li h4 a{font-size:13px;color:#666;text-decoration:none;font-family:'poppins';line-height:24px;}
+.chatlist-user ul li p{font-size:12px;font-family:'Roboto';color:#999;text-decoration:none;margin:0;padding:0;}
+
+
+/***** 27-april-2017 *****/
+.social-connect{text-align:center;}
+.social-connect > div:after{content:'';display:block;clear:both;}
+.social-connect > div{padding:12px;display:inline-block;vertical-align:top;margin:0 10px;border-radius:4px;}
+.social-connect span{float:left;margin:0 10px 0 0;height:30px;}
+.social-connect span svg{width:30px;height:30px;fill:#fff;}
+.social-connect p{float:left;font-family:'poppins';font-weight:500;color:#fff;text-transform:uppercase;letter-spacing:0.03em;margin:1px 20px 0 0;font-size:12px;text-align:left;line-height:15px;}
+.social-connect a{background:#fff;border-radius:4px;padding:6px 5px 4px;line-height:16px;text-transform:uppercase;font-family::'poppins';font-weight:500;letter-spacing:.03em;display:inline-block;vertical-align:top;border:2px solid #fff;text-decoration:none;font-size:14px;min-width:100px;}
+.social-connect a:hover{background:transparent;color:#fff;}
+
+.facebook-connet{background:#2b527b;}
+.facebook-connet a{color:#2b527b;}
+.instagram-connet{background:#b3404a;}
+.instagram-connet a{color:#b3404a;}
+
+ul.my-picture-ul > li > .my-picture-box > a.video-tag:before{background:rgba(0,0,0,.7);width:100%;height:100%;display:block;content:'';position:absolute;top:0;left:0;z-index:1;  }
+ul.my-picture-ul > li > .my-picture-box > a.video-tag:after{content:'\e917';position:absolute;top:50%;left:50%;font-family: 'icomoon';font-size:36px;line-height:36px;color:#fff;z-index:10; transform:translate(-50%, -50%);}
+ul.my-picture-ul > li:hover .my-picture-box > a.video-tag:after{display:none; }
