--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ input:checked + .slider:before { -webkit-transform: translateX(56px); -ms-transf
 .play-btn-large:hover{background:transparent;color:#fff;text-decoration:none;}
 ._timestamp{padding:4px;background:#fff;opacity:0.7;color:#000;position:absolute;top:15px;right:15px;border-radius:5px;font-size:10px;z-index:10;}
 .level2 .my-picture-box > a:first-child{overflow:hidden;height:250px;width:250px;}
-.level2 .my-picture-box img{position: absolute;left:-99999px;top:-99999px;right:-99999px;bottom:-99999px;margin:auto;}
+.level2 .my-picture-box img{position: absolute !important;left:-99999px !important;top:-99999px !important;right:-99999px !important;bottom:-99999px !important;margin:auto !important;transform:none !important;height:100%;width:100%;}
 .level2 .picture-action{opacity:1;}
 .level2 .picture-action:before{background:none;}
 .level2 .my-picture-box:hover .picture-action:before{background:rgba(242,111,111,.6);}
@@ -361,7 +361,7 @@ input:checked + .slider:before { -webkit-transform: translateX(56px); -ms-transf
 
 .message-css{background:#fff; position:fixed;top:50px;right:50px;z-index:100;box-shadow: 0 0 30px 0 rgba(0,0,0,.4);}
 .message-css h3{margin:0;padding:0 0 3px;font-size:22px;text-decoration:none;line-height:100%;text-transform:uppercase;display:block;
-letter-spacing:0.05em;font-family:'Poppins';font-weight:300;}
+                letter-spacing:0.05em;font-family:'Poppins';font-weight:300;}
 .message-css p{margin:0;padding:0;font-size:14px;color:#666;text-transform:uppercase;line-height:22px;white-space:nowrap;font-family:'Roboto';letter-spacing:0.08em;}
 .message-l{float:left;width:64px;height:74px;float:left;text-align:center;padding:24px 0;}
 .message-l svg{width:26px;height:26px;fill:#fff;}
@@ -469,3 +469,12 @@ letter-spacing:0.05em;font-family:'Poppins';font-weight:300;}
 ul.my-picture-ul > li > .my-picture-box > a.video-tag:before{background:rgba(0,0,0,.7);width:100%;height:100%;display:block;content:'';position:absolute;top:0;left:0;z-index:1;  }
 ul.my-picture-ul > li > .my-picture-box > a.video-tag:after{content:'\e917';position:absolute;top:50%;left:50%;font-family: 'icomoon';font-size:36px;line-height:36px;color:#fff;z-index:10; transform:translate(-50%, -50%);}
 ul.my-picture-ul > li:hover .my-picture-box > a.video-tag:after{display:none; }
+
+/*ac-style*/
+.nbmatches .adv{margin:30px;border:1px solid red;}
+.nbmatches .user-list-pic-wrapper{width:400px;}
+.nbmatches .user-list-pic-bg{height:400px;}
+.nbmatches .user-list-pic:before{top:70px;right:30px;width:20%;}
+.nbmatches .user-list-l-l{min-height:400px;}
+.nbmatches .user-likes a{margin:0 20px;}
+.nbmatches .user-list-l{max-width:400px;}
