--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,7 @@ a:hover, a:focus{outline:none;outline:0;outline-offset:0;}
 .user-likes a{width:50px;height:50px;text-align:center;display:inline-block;padding:0;transition:easy-in-out .5s;margin:0 35px;vertical-align:top;}
 
 
-.user-list-r{width:100%;max-width:480px;float:right;padding:86px 0 0;}
+.user-list-r{width:100%;max-width:480px;float:left;padding:86px 0 0 110px;}
 .user-list-r h2{margin:0 0 35px;padding:0;font-size:100%;line-height:100%;display:block;}
 /*.user-list-r h2 big:after{width:100px;height:4px;background:#f26f6f;position:absolute;top:42%;right:105%;content:'';transform:translateY(-50%);}*/
 .user-list-r h2 big{font-family:'poppins';font-size:30px;font-weight:700;line-height:100%;text-transform:uppercase;color:#221e1e;letter-spacing:0.08em;line-height:30px;display:block;position:relative;}
@@ -471,7 +471,7 @@ ul.my-picture-ul > li > .my-picture-box > a.video-tag:after{content:'\e917';posi
 ul.my-picture-ul > li:hover .my-picture-box > a.video-tag:after{display:none; }
 
 /*ac-style*/
-.nbmatches .adv{margin:20px;}
+.nbmatches .adv{margin:20px;border:2px solid #f26f6f;}
 .nbmatches .user-list-pic-wrapper{width:400px;}
 .nbmatches .user-list-pic-bg{height:400px;}
 .nbmatches .user-list-pic:before{top:70px;right:30px;width:20%;}
