--- a/assets/css/icomoon.css
+++ b/assets/css/icomoon.css
@@ -1,129 +1,36 @@
-@font-face {
-  font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?fyfppt');
-  src:  url('../fonts/icomoon.eot?fyfppt#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?fyfppt') format('truetype'),
-    url('../fonts/icomoon.woff?fyfppt') format('woff'),
-    url('../fonts/icomoon.svg?fyfppt#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-arrow-left:before {
-  content: "\e900";
-}
-.icon-camera:before {
-  content: "\e901";
-}
-.icon-cancel:before {
-  content: "\e902";
-}
-.icon-chat:before {
-  content: "\e903";
-}
-.icon-close:before {
-  content: "\e904";
-}
-.icon-down-arrow:before {
-  content: "\e905";
-}
-.icon-edit:before {
-  content: "\e906";
-}
-.icon-facebook-letter-logo:before {
-  content: "\e907";
-}
-.icon-full-screen:before {
-  content: "\e908";
-}
-.icon-gift:before {
-  content: "\e909";
-}
-.icon-google-plus:before {
-  content: "\e90a";
-}
-.icon-heart:before {
-  content: "\e90b";
-}
-.icon-instagram .path1:before {
-  content: "\e90c";
-  color: rgb(179, 64, 74);
-}
-.icon-instagram .path2:before {
-  content: "\e90d";
-  margin-left: -1em;
-  color: rgb(179, 64, 74);
-}
-.icon-instagram .path3:before {
-  content: "\e90e";
-  margin-left: -1em;
-  color: rgb(244, 178, 176);
-}
-.icon-instagram .path4:before {
-  content: "\e90f";
-  margin-left: -1em;
-  color: rgb(179, 64, 74);
-}
-.icon-instagram .path5:before {
-  content: "\e910";
-  margin-left: -1em;
-  color: rgb(179, 64, 74);
-}
-.icon-instagram-logo:before {
-  content: "\e911";
-}
-.icon-linkedin-logo:before {
-  content: "\e912";
-}
-.icon-next-arrow:before {
-  content: "\e913";
-}
-.icon-next-page:before {
-  content: "\e914";
-}
-.icon-photo-camera:before {
-  content: "\e915";
-}
-.icon-picture:before {
-  content: "\e916";
-}
-.icon-play-button:before {
-  content: "\e917";
-}
-.icon-prev-arrow:before {
-  content: "\e918";
-}
-.icon-star:before {
-  content: "\e919";
-}
-.icon-tick-inside-circle:before {
-  content: "\e91a";
-}
-.icon-twitter:before {
-  content: "\e91b";
-}
-.icon-unlink:before {
-  content: "\e91c";
-}
-.icon-video-camera:before {
-  content: "\e91d";
-}
-.icon-youtube:before {
-  content: "\e91e";
-}
-
+@font-face{font-family:'icomoon';src:url('../fonts/icomoon.eot?fyfppt');src:url('../fonts/icomoon.eot?fyfppt#iefix') format('embedded-opentype'),
+url('../fonts/icomoon.ttf?fyfppt') format('truetype'),
+url('../fonts/icomoon.woff?fyfppt') format('woff'),
+url('../fonts/icomoon.svg?fyfppt#icomoon') format('svg');font-weight:normal;font-style:normal;}
+[class^="icon-"], [class*=" icon-"]{font-family:'icomoon' !important;speak:none;font-style:normal;font-weight:normal;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
+.icon-arrow-left:before{content:"\e900";}
+.icon-camera:before{content:"\e901";}
+.icon-cancel:before{content:"\e902";}
+.icon-chat:before{content:"\e903";}
+.icon-close:before{content:"\e904";}
+.icon-down-arrow:before{content:"\e905";}
+.icon-edit:before{content:"\e906";}
+.icon-facebook-letter-logo:before{content:"\e907";}
+.icon-full-screen:before{content:"\e908";}
+.icon-gift:before{content:"\e909";}
+.icon-google-plus:before{content:"\e90a";}
+.icon-heart:before{content:"\e90b";}
+.icon-instagram .path1:before{content:"\e90c";color:rgb(179, 64, 74);}
+.icon-instagram .path2:before{content:"\e90d";margin-left:-1em;color:rgb(179, 64, 74);}
+.icon-instagram .path3:before{content:"\e90e";margin-left:-1em;color:rgb(244, 178, 176);}
+.icon-instagram .path4:before{content:"\e90f";margin-left:-1em;color:rgb(179, 64, 74);}
+.icon-instagram .path5:before{content:"\e910";margin-left:-1em;color:rgb(179, 64, 74);}
+.icon-instagram-logo:before{content:"\e911";}
+.icon-linkedin-logo:before{content:"\e912";}
+.icon-next-arrow:before{content:"\e913";}
+.icon-next-page:before{content:"\e914";}
+.icon-photo-camera:before{content:"\e915";}
+.icon-picture:before{content:"\e916";}
+.icon-play-button:before{content:"\e917";}
+.icon-prev-arrow:before{content:"\e918";}
+.icon-star:before{content:"\e919";}
+.icon-tick-inside-circle:before{content:"\e91a";}
+.icon-twitter:before{content:"\e91b";}
+.icon-unlink:before{content:"\e91c";}
+.icon-video-camera:before{content:"\e91d";}
+.icon-youtube:before{content:"\e91e";}
