--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,6 +466,14 @@ letter-spacing:0.05em;font-family:'Poppins';font-weight:300;}
 .instagram-connet{background:#b3404a;}
 .instagram-connet a{color:#b3404a;}
 
-ul.my-picture-ul > li > .my-picture-box > a.video-tag:before{background:rgba(0,0,0,.7);width:100%;height:100%;display:block;content:'';position:absolute;top:0;left:0;z-index:1;  }
+ul.my-picture-ul > li > .my-picture-box > a.video-tag:before{background:rgba(0,0,0,0.7);width:100%;height:100%;display:block;content:'';position:absolute;top:0;left:0;z-index:1;}
 ul.my-picture-ul > li > .my-picture-box > a.video-tag:after{content:'\e917';position:absolute;top:50%;left:50%;font-family: 'icomoon';font-size:36px;line-height:36px;color:#fff;z-index:10; transform:translate(-50%, -50%);}
 ul.my-picture-ul > li:hover .my-picture-box > a.video-tag:after{display:none; }
+
+/***** 1May-2017  *****/
+.form-control[disabled], 
+.form-control[readonly],
+fieldset[disabled] .form-control{background:#fff;}
+.form-control{border:1px solid #eeecec !important;padding:10px 15px;line-height:20px;box-shadow:none !important;height:auto;border-radius:0;}
+.input-group-btn>.btn{background-color:#bbb;border:1px solid #eee;margin:0;padding:12px 15px 8px;line-height:20px;border-radius:0;text-transform:uppercase;}
+.choose-file h6{margin:0;padding: 0 0 1px; font-size: 14px; line-height: normal; color: #999; font-weight: 500; font-family: 'poppins'; text-transform: uppercase; display: block; letter-spacing: 0.08em;}
