Prepared one to one video call for web application using twilio node library.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -134,7 +134,7 @@ div#controls div#log {
 }
 
 div#controls div#log p {
-  color: #686865;
+  color: #fff;
   font-family: 'Share Tech Mono', 'Courier New', Courier, fixed-width;
   font-size: 1.25em;
   line-height: 1.25em;
