--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,19 +398,24 @@ input:checked + .slider:before { -webkit-transform: translateX(56px); -ms-transf
 .message-to-talk p{ font-family:'Roboto'; font-size:14px; color:#666; line-height:20px; float:right; text-align:right; margin:0;}
 .message-to-talk p a{ color:#51ca94;}
 .message-to-talk p a:hover{ color:#ff5f39;}
-.message-to-owner{ width:100%; display:inline-block; vertical-align:top; max-height:285px; overflow:auto; border:1px solid #f0efef; margin-bottom:25px; }
-.message-to-owner ul{ list-style:none; width:100%; display:inline-block; vertical-align:top; margin:10px 0 0; }
-.message-to-owner ul li{ padding:0 15px 10px 75px; min-height:65px; margin:0 0 10px; position:relative; border-bottom:1px solid #f0efef; display:table; width:100%;}
+.message-to-owner{ width:100%; display:inline-block; vertical-align:top; max-height:285px; overflow:auto; margin-bottom:25px; }
+.message-to-owner ul{ list-style:none; width:100%; display:inline-block; vertical-align:top; margin:10px 0 0;background:#fff;  }
+.message-to-owner ul li{ padding:0 15px 10px 85px; min-height:65px; margin:0 0 10px; position:relative; display:table; width:100%;}
 .message-to-owner ul li:last-child{padding-bottom:0;border-bottom:0;margin:0;}
-.message-to-owner ul li .pic-01{ background:#f0efef; width:54px; height:54px; -webkit-border-radius:60px; -moz-border-radius:60px; border-radius:60px; position:absolute; left:10px; top:0; overflow:hidden;}
+.message-to-owner ul li .pic-01{ background:#fff; width:54px; min-height:54px; -webkit-border-radius:60px; -moz-border-radius:60px; border-radius:60px; position:absolute; left:10px; top:0; overflow:hidden;}
 .message-to-owner ul li .pic-01 a{ display:block; }
 .message-to-owner ul li .pic-01 img{ width:100%; height:100%;}
-.message-to-owner ul li p{ font-family:'Roboto'; font-size:14px; color:#666; line-height:16px; height:54px; display:table-cell; vertical-align:middle;margin:0;}
-.message-to-owner ul li.rider-talk .pic-01{ right:10px; left:auto;}
-.message-to-owner ul li.rider-talk { padding-right:75px; padding-left:15px;}
-.message-to-owner ul li.rider-talk p{ text-align:right;}
-.tab-content { border:1px solid #f0efef; margin:-1px 0 0; padding:20px; -webkit-box-shadow:3px 3px 3px -1px rgba(120, 135, 146, 0.5); -moz-box-shadow:3px 3px 3px -1px rgba(120, 135, 146, 0.5); box-shadow:3px 3px 3px -1px rgba(120, 135, 146, 0.5); display:inline-block; vertical-align:top; width:100%;background:#fff;}
+.message-to-owner ul li p{ font-family:'Roboto'; font-size:14px; color:#666; line-height:16px; height:54px; display:table-cell; vertical-align:middle;margin:0;background:#e6eaee;border-radius:10px;padding:15px 65px 15px 15px;position:relative;}
+.message-to-owner ul li.user-talk p:after{border-bottom: 10px solid rgba(0, 0, 0, 0);border-right: 16px solid rgb(230, 234, 238);border-top: 12px solid rgba(0, 0, 0, 0);content: "";height: 0;left: -10px;position: absolute;top: 2px; width:0;}
+.message-to-owner ul li.rider-talk p:after{border-bottom: 10px solid rgba(0, 0, 0, 0);border-left: 16px solid rgb(230, 234, 238);border-top: 12px solid rgba(0, 0, 0, 0);content: "";height: 0;right: -10px;position: absolute;top: 2px; width:0;}
 
+.message-to-owner ul li.rider-talk .pic-01{ right:10px; left:auto;}
+.message-to-owner ul li.rider-talk { padding-right:85px; padding-left:15px;}
+.message-to-owner ul li.rider-talk p{ text-align:right;padding:15px 15px 15px 65px;}
+.tab-content { border:1px solid #f0efef; margin:-1px 0 0; padding:20px; -webkit-box-shadow:3px 3px 3px -1px rgba(120, 135, 146, 0.5); -moz-box-shadow:3px 3px 3px -1px rgba(120, 135, 146, 0.5); box-shadow:3px 3px 3px -1px rgba(120, 135, 146, 0.5); display:inline-block; vertical-align:top; width:100%;background:#fff;}
+.message-to-owner ul li p span{color: rgb(102, 102, 102); font-size: 12px; font-style: italic; position: absolute;top: 20px;}
+.message-to-owner ul li.rider-talk p span{left: 10px;right:auto;}
+.message-to-owner ul li.user-talk p span{right: 10px;left:auto;}
 
 .message-conversations{ width:100%; display:inline-block; vertical-align:top;} 
 .message-conversations .tab-content p{ font-family:'Roboto'; font-size:14px; color:#666; line-height:100%; margin:10px 0;}
