--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -130,17 +130,28 @@ ul.my-picture-ul > li {padding:7px;}
 }
 
 @media(max-width:767px){
-.logo{padding:0;}
+.logo{padding:12px 0 0;}
+.user-dropdown > a {margin: 0;}
 .logo a img{height:34px;}
 .login-instagram{padding:0;}
 .header {margin:15px 0 0;padding:10px 15px;}
+.withoutlogin .header-r a span{display:none;}
+.withoutlogin .header-r {padding:0;}
+.withoutlogin .logo {padding: 0;}
+.withoutlogin .header {padding: 20px 15px 15px;}
+.social-connect > div {margin:0 0 15px;}
+.social-connect {padding: 0;text-align: center;}
+.table-responsive > .usr-list.table {min-width: 450px;}
+.table-wrapper.content-list .table {min-width: 450px;}
+.table-wrapper.content-list {overflow:auto;margin:0 0 20px; }
 .bx-wrapper img {max-width:940px;left:50%;position:relative;transform:translateX(-50%);min-width: inherit;}
 .hero-caption a {width:130px;padding:7px;line-height:14px;margin:0;}
 .bx-controls.bx-has-pager.bx-has-controls-direction{display:none;}
 .luvr-benefits-ul li {width:100%;float:none;}
-.hero-caption h2 {font-size:24px;letter-spacing:0.02em;line-height:normal;line-height:30px;}
+.hero-caption h2 {font-size: 20px;letter-spacing: 0;line-height: 24px;}
 .hero-caption h2 br{display:none;}
 .hero-caption p {margin:0 0 15px;line-height:normal;padding:0;letter-spacing: 0.02em;}
+.hero-caption p br{display:none;}
 .hero-caption {max-width:initial;left:6%;transform:translate(0,-50%);text-align:left;margin:60px 0 0 0;width:92%;}
 .home-welcome h2 {margin: 0 0 20px;padding: 0 0 10px;font-size: 100%;line-height: 100%;position: relative;display: inline-block;vertical-align: top;}
 .home-welcome h2 big {font-size:26px;}
