--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,7 +363,7 @@ input:checked + .slider:before { -webkit-transform: translateX(56px); -ms-transf
 .message-css h3{margin:0;padding:0 0 3px;font-size:22px;text-decoration:none;line-height:100%;text-transform:uppercase;display:block;
                 letter-spacing:0.05em;font-family:'Poppins';font-weight:300;}
 .message-css p{margin:0;padding:0;font-size:14px;color:#666;text-transform:uppercase;line-height:22px;white-space:nowrap;font-family:'Roboto';letter-spacing:0.08em;}
-.message-l{float:left;width:64px;height:74px;float:left;text-align:center;padding:24px 0;}
+.message-l{float:left;width:64px;height:74px;text-align:center;padding:24px 0;}
 .message-l svg{width:26px;height:26px;fill:#fff;}
 .message-r{float:right;padding:14px 16px 10px;}
 
@@ -491,3 +491,13 @@ fieldset[disabled] .form-control{background:#fff;}
 #preview video{width:100%;display:block;}
 #preview #local-media{position:absolute;bottom:0;right:0;border:2px solid #f26f6f;padding:0;}
 #preview #local-media:empty{border:none;}
+#call_img{border:1px solid #fff;border-radius:50%;-webkit-border-radius:50%;-moz-border-radius:50%;}
+#call_statuses .message-l{padding:17px 0;}
+#room-controls{border:none;margin:0 auto;}
+#room-controls li{background:none;cursor:pointer;margin-right:10px;}
+#room-controls li:last-child{margin:0;}
+#room-controls li a{border-right:none;}
+#room-controls li#button-call,#room-controls li#button-join{background-image:url(../images/icon-05.png);background-repeat:no-repeat;height:40px;width:40px;}
+#room-controls li#button-reject,#room-controls li#button-leave{background-image:url(../images/icon-06.png);background-repeat:no-repeat;height:40px;width:40px;}
+.success-message #call_img{cursor:pointer;}
+span#log{font-style:italic;color:#bbb;margin-left:5px;}
