--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,10 @@ ul.my-picture-ul:after,
 .account-body-head p{margin:5px 0 0;padding:0;font-size:12px;font-family:'Roboto';letter-spacing:0.08em;text-transform:uppercase;color:#666;font-weight:500;}
 ul.my-picture-ul{list-style:none;margin:-15px -15px 0;padding:0;}
 ul.my-picture-ul > li{width:33.33%;float:left;padding:15px;position:relative;}
-ul.my-picture-ul.level2 > li{width:25%;max-height:250px;overflow:hidden;}
+ul.my-picture-ul.level2{margin:0; }
+ul.my-picture-ul.level2 > li {max-height:250px;overflow: hidden;padding: 0 30px 0 0;width:285px;margin:0 0 30px;}
+ul.my-picture-ul.level2 > li:nth-child(4n+4){padding-right:0; }
+ul.my-picture-ul.level2 > li .my-picture-box{border:0;}
 ul.my-picture-ul > li > .my-picture-box > a{display:block;width:100%;position:relative;overflow:hidden;height:166px; }
 ul.my-picture-ul > li > .my-picture-box > a img{min-width:166px;min-height:166px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
 .my-picture-box{position:relative;border:4px solid #fff;}
@@ -330,7 +333,7 @@ input:checked + .slider:before { -webkit-transform: translateX(56px); -ms-transf
 .play-btn-large:before{position:relative;left:5px;font-size:30px;line-height:58px;vertical-align:middle;text-decoration:none;}
 .play-btn-large:hover{background:transparent;color:#fff;text-decoration:none;}
 ._timestamp{padding:4px;background:#fff;opacity:0.7;color:#000;position:absolute;top:15px;right:15px;border-radius:5px;font-size:10px;z-index:10;}
-.level2 .my-picture-box > a:first-child{overflow:hidden;height:250px;width:250px;}
+.level2 .my-picture-box > a:first-child{overflow:hidden;height:250px;width:100%;}
 .level2 .my-picture-box img{position: absolute !important;left:-99999px !important;top:-99999px !important;right:-99999px !important;bottom:-99999px !important;margin:auto !important;transform:none !important;height:100%;width:100%;}
 .level2 .picture-action{opacity:1;}
 .level2 .picture-action:before{background:none;}
@@ -483,12 +486,19 @@ fieldset[disabled] .form-control{background:#fff;}
 .input-group-btn>.btn{background-color:#bbb;border:1px solid #eee;margin:0;padding:12px 15px 8px;line-height:20px;border-radius:0;text-transform:uppercase;}
 .choose-file h6{margin:0;padding: 0 0 1px; font-size: 14px; line-height: normal; color: #999; font-weight: 500; font-family: 'poppins'; text-transform: uppercase; display: block; letter-spacing: 0.08em;}
 /*ac-style*/
+.adv,
 .nbmatches .adv{margin:20px;border:2px solid #f26f6f;background:#fff;}
+.user-list-pic-wrapper,
 .nbmatches .user-list-pic-wrapper{width:400px;}
+.user-list-pic-bg,
 .nbmatches .user-list-pic-bg{height:400px;}
+.user-list-pic:before,
 .nbmatches .user-list-pic:before{top:70px;right:30px;width:20%;}
+.user-list-l-l,
 .nbmatches .user-list-l-l{min-height:400px;}
+.user-likes a,
 .nbmatches .user-likes a{margin:0 20px;}
+.user-list-l,
 .nbmatches .user-list-l{max-width:400px;}
 
 /* Video Call CSS */
