--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,3 +525,12 @@ span#log{font-style:italic;color:#bbb;margin-left:5px;}
 .location-block{margin:0 0 10px;top:16px;position:relative;display:inline-block;vertical-align:middle;width:100%;}
 .input-addres-div .btn-success{float:right;margin:-33px 0 0;}
 #frm_powerluvs{font-size:14px;font-weight:normal;margin:12px -10px 0 10px;}
+
+/* message_list for message listing changes - 25-5-17 */
+.message-to-owner ul li p a.remove-chat{position: absolute; border-radius: 60px; width: 24px; height: 24px; background: #FFF; text-align: center; font-size: 12px;line-height: 20px; color: #666; text-decoration: none; border: 2px solid #fff; box-shadow: 0 0 10px 0 rgba(0,0,0,.2);}
+.user-talk p a.remove-chat{top: -12px; left:auto;right:-10px;}
+.rider-talk p a.remove-chat{top: -12px; left:-10px;right:auto;}
+.chat_video{position:relative;display:inline-block;vertical-align:middle;}
+.chat_video:before{content:'';background:rgba(0,0,0,.4);width:100%;height:100%;position:absolute;top:0;left:0;display:block;  }
+.chat_video:after{content:'';width:0;height:0;border-top:10px solid transparent;border-bottom:10px solid transparent;border-left:10px solid #fff;position:absolute;top:50%;left:50%;
+-webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);transform:translate(-50%, -50%); }
