--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,6 +2,10 @@
 .ftr-contact a{pointer-events:none;}
 }*/
 
+@media (min-width:1200px) and (max-width:1700px){
+.account-r.has-player{width:50%;}
+}
+
 @media(max-width:1499px){
 .bx-wrapper img {max-width:100%;min-width:1199px;}
 .hero-caption h2 {margin:0 0 10px;padding:0;font-size:34px;letter-spacing:0.03em;line-height:44px;}
@@ -9,19 +13,25 @@
 .hero-caption a {widtH:140px;padding:10px;}
 .header {margin: 30px 0 0;}
 .hero-section {margin:-110px 0 0;}
+
+}
+
+@media(min-width:1440px){
+.video-box-add{width:300px;}
 }
 
 @media (min-width:1200px) and (max-width:1499px){
-    .user-list-l,
-    .nbmatches .user-list-l {width:48%;}
-    .user-list-r {width: 46%;}
-    
+.user-list-l,
+.nbmatches .user-list-l {width:48%;}
+.user-list-r {width: 46%;}
 }
 
+@media(min-width:1300px){
+.video-box-add{width:250px;}
+}
 @media (min-width:1200px) and (max-width:1279px){
 .benefits-content p br{display:none;}
 }
-
 @media(max-width:1199px){
 .home-welcome p br,
 .benefits-content p br{display:none;}
@@ -32,6 +42,7 @@
 }
 
 @media(min-width:1025px) and (max-width:1199px){
+.account-r.has-player{width:46%;}
 .footer-column:nth-child(1){width:21%;}
 .footer-column:nth-child(2){width:24%;}
 .footer-column:nth-child(3){width:34%;}
@@ -101,7 +112,9 @@
 
 }
 
-
+@media(min-width:1025px){
+.account-r.has-player{min-height:600px;}
+}
 @media(max-width:1024px){
 .footer-column:nth-child(1){width:18%;}
 .footer-column:nth-child(2){width:25%;}
@@ -114,6 +127,8 @@
 .user-likes a,
 .nbmatches .user-likes a {margin: 0 10px;}
 .user-list-r h2 big { word-break: break-all;}
+.ad-video {left:0;position:relative;top:0;-webkit-transform:translateY(0);-moz-transform:translateY(0);transform:translateY(0);}
+.video-box-add {background:#eee;display:inline-block;height:220px;margin:0 20px 20px 0;width:42%;}
 }
 
 @media(min-width:992px) and (max-width:1024px){
@@ -121,6 +136,7 @@
 .my-account::after {left:308px;}
 .left-my-picture ul li {padding:0 7px 20px;}
 ul.my-picture-ul > li {padding:10px;}
+#hpplayer{right:20px;width:420px !important;}
 }
 
 @media(min-width:768px) and (max-width:991px){
@@ -146,6 +162,7 @@ ul.my-picture-ul > li {padding:10px;}
 .left-my-picture ul li {padding:0 5px 20px;}
 ul.my-picture-ul > li {padding:7px;}
 #frm_powerluvs .color-btn {min-width: inherit;white-space: nowrap;width:45px;overflow:hidden;}
+#hpplayer{width:350px !important;}
 
 }
 
@@ -204,11 +221,11 @@ ul.my-picture-ul > li {padding:7px;}
 .account-r-head a{margin-top:4px;}
 .account-r-body {padding:0 2px;}
 ul.my-picture-ul > li {width:50%;}
-
 .user-list-r {float: none;padding:0; width:85%;margin:0 auto; }
 .user-list-r h2 big { word-break: break-all;}
 .bg-name {font-size:160px;}
 .user-list-r h2 {margin:0 0 15px;}
+#hpplayer{position:relative;right:0;width:100% !important;}
 
 }
 
@@ -226,7 +243,7 @@ ul.my-picture-ul > li {width:100%;}
 .nbmatches .user-list-pic-bg {width:280px;height:280px;}
 .user-likes a,
 .nbmatches .user-likes a {margin: 0 5px;}
-
+.video-box-add {margin:0 0 20px;width:100%;}
 
 }
 
