1. Added one more commercial video player in right sidebar of the screens on which we added jw players yesterday. 2. Added 3 commercial video players on all pages of user account settings. 3. Designed and siplayed horizontal video players, so that videos can be adjusted easily if the page content is much wider to set video players in it.

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -113,7 +113,7 @@
 }
 
 @media(min-width:1025px){
-.account-r.has-player{min-height:600px;}
+.account-r.has-player{min-height:760px;}
 }
 @media(max-width:1024px){
 .footer-column:nth-child(1){width:18%;}
@@ -127,8 +127,8 @@
 .user-likes a,
 .nbmatches .user-likes a {margin: 0 10px;}
 .user-list-r h2 big { word-break: break-all;}
-.ad-video {left:0;position:relative;top:0;-webkit-transform:translateY(0);-moz-transform:translateY(0);transform:translateY(0);}
-.video-box-add {background:#eee;display:inline-block;height:220px;margin:0 20px 20px 0;width:42%;}
+.ad-video{left:0;position:relative;top:0;-webkit-transform:translateY(0);-moz-transform:translateY(0);transform:translateY(0);}
+.video-box-add{background:#eee;display:inline-block;margin:0 20px 20px 0;width:42%;}
 }
 
 @media(min-width:992px) and (max-width:1024px){
