Added "Back" button on all pages of site to navigate to back page.

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -228,6 +228,7 @@ ul.my-picture-ul > li {width:50%;}
 .bg-name {font-size:160px;}
 .user-list-r h2 {margin:0 0 15px;}
 #hpplayer{position:relative;right:0;width:100% !important;}
+.back-btn-div{top:20px;}
 
 }
 
