1. Added scroll redirect to packages tab of homepage while clicking on view more link from top panel. 2. Prepared 2 new pages drluvr and drluvr/videoN to list and play the dating videos as requested by optimatic executives. 3. Readjusted video player to the top panel of homepage.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ a:hover, a:focus{outline:none;outline:0;outline-offset:0;}
 .hero-section li{text-align:center;} 
 
 /***** Welcome section *****/
-.home-welcome{width:100%;background:#b8dfdc;padding:80px 0;text-align:center;}
+.home-welcome{width:100%;background:#b8dfdc;padding:80px 0;text-align:center;position:relative;}
 .home-welcome h2:before,
 .home-welcome h2:after{width:60%;content:'';position:absolute;bottom:3px;left:20%;background:#231f20;height:1px;}
 .home-welcome h2:after{height:2px;bottom:0;}
@@ -581,6 +581,11 @@ label.missed{font-weight:normal;display:inline;color:#f26f6f;cursor:text;}
 .back-btn-div{z-index:1;margin:-20px 0 30px;}
 .account-l .back-btn-div {top:0;position:relative;margin:-5px 0 20px;}
 .back-btn-div a{background:url(../images/back-btn.png) no-repeat 0 0;display:block;width:158px;height:52px;text-decoration:none; }
-.video .back-btn-div {position:relative;top:0;left: -1px;z-index: 1;max-width: 1170px;margin:0 auto 30px;}
+.video .back-btn-div {position:relative;top:0;left: -1px;z-index: 1;max-width: 1170px;}
 .midieast-container{min-height:inherit;}
 .midieast-bg img{max-width:100%;}
+
+
+.dating-box ul.my-picture-ul{margin:0; }
+.dating-box ul.my-picture-ul > li{width:25%;float:left;padding:15px 15px 15px 0;position:relative;}
+.drluvr-btn{color:#2887c7;border:2px solid #2887c7;background: transparent;padding:15px 35px;text-decoration:none !important;position:absolute;top:20px;right:205px;line-height:normal;font-family:comic sans ms;}
