--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -135,6 +135,7 @@
 .ad-video{left:0;position:relative;top:0;-webkit-transform:translateY(0);-moz-transform:translateY(0);transform:translateY(0);}
 .video-box-add,
 .ad-video-h .video-box-add{background:#eee;display:inline-block;margin:0 20px 20px 0;width:42%;}
+.drluvr-btn{right: 20px;}
 }
 
 @media(min-width:992px) and (max-width:1024px){
@@ -145,6 +146,8 @@ ul.my-picture-ul > li {padding:10px;}
 #hpplayer{right:20px;width:420px !important;}
 #hpplayer {width:500px !important;}
 .hero-caption h2 {font-size:30px;}
+.dating-box ul.my-picture-ul > li{width:33.33%;}
+
 }
 
 @media(min-width:768px) and (max-width:991px){
@@ -174,6 +177,7 @@ ul.my-picture-ul > li {padding:7px;}
 .hero-caption p {width:40%;font-size:14px;}
 .hero-caption p br{display:none;}
 .hero-caption h2 {font-size:30px;}
+.dating-box ul.my-picture-ul > li{width:33.33%;}
 }
 
 @media(max-width:767px){
@@ -237,7 +241,8 @@ ul.my-picture-ul > li {width:50%;}
 .user-list-r h2 {margin:0 0 15px;}
 #hpplayer{position:relative;right:0;width:100% !important;}
 .back-btn-div{top:20px;}
-
+.dating-box ul.my-picture-ul > li{width:50%;}
+.drluvr-btn{position: initial;display: block;width: 50%;margin: 0 auto;margin-bottom: 40px;}
 }
 
 
@@ -255,6 +260,8 @@ ul.my-picture-ul > li {width:100%;}
 .user-likes a,
 .nbmatches .user-likes a {margin: 0 5px;}
 .video-box-add,.ad-video-h .video-box-add{margin:0 0 20px;width:100%;}
+.dating-box ul.my-picture-ul > li{width:100%;max-width:262px;margin:0 auto 15px;float:none; }
+.drluvr-btn{width: 70%;}
 }
 
 /*19-04-2017*/
