--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -13,7 +13,6 @@
 .hero-caption a {widtH:140px;padding:10px;}
 .header {margin: 30px 0 0;}
 .hero-section {margin:-110px 0 0;}
-
 }
 
 @media(min-width:1440px){
@@ -114,7 +113,7 @@
 .bg-name {font-size:160px;}
 .content-div{width:70% !important;}
 .ad-div{width:15% !important;}
-
+.drluvr-btn{top:-40px;}
 }
 
 @media(min-width:1025px){
@@ -135,7 +134,6 @@
 .ad-video{left:0;position:relative;top:0;-webkit-transform:translateY(0);-moz-transform:translateY(0);transform:translateY(0);}
 .video-box-add,
 .ad-video-h .video-box-add{background:#eee;display:inline-block;margin:0 20px 20px 0;width:42%;}
-.drluvr-btn{right: 20px;}
 }
 
 @media(min-width:992px) and (max-width:1024px){
@@ -147,7 +145,7 @@ ul.my-picture-ul > li {padding:10px;}
 #hpplayer {width:500px !important;}
 .hero-caption h2 {font-size:30px;}
 .dating-box ul.my-picture-ul > li{width:33.33%;}
-
+.drluvr-btn{top:-30px;}
 }
 
 @media(min-width:768px) and (max-width:991px){
@@ -178,6 +176,7 @@ ul.my-picture-ul > li {padding:7px;}
 .hero-caption p br{display:none;}
 .hero-caption h2 {font-size:30px;}
 .dating-box ul.my-picture-ul > li{width:33.33%;}
+.drluvr-btn{top:-20px;}
 }
 
 @media(max-width:767px){
@@ -242,7 +241,7 @@ ul.my-picture-ul > li {width:50%;}
 #hpplayer{position:relative;right:0;width:100% !important;}
 .back-btn-div{top:20px;}
 .dating-box ul.my-picture-ul > li{width:50%;}
-.drluvr-btn{position: initial;display: block;width: 50%;margin: 0 auto;margin-bottom: 40px;}
+.drluvr-btn{position: initial;display:block;width:50%;margin: 0 auto 20px;top:0;}
 }
 
 
